--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,13 @@ spring.application.name=test
 
 
 # H2 Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+
 # H2 Console Configuration (Optional)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-
 
